--- a/mdbook-protobuf/templates/proto.html
+++ b/mdbook-protobuf/templates/proto.html
@@ -1,5 +1,20 @@
 <div class="proto">
-    {% for service in services %}
-        {{ service|safe }}
-    {% endfor %}
+    <fieldset class="services">
+        <label>Services</label>
+        {% for service in services %}
+            {{ service|safe }}
+        {% endfor %}
+    </fieldset>
+    <fieldset class="messages">
+        <label>Messages</label>
+        {% for message in messages %}
+            {{ message|safe }}
+        {% endfor %}
+    </fieldset>
+    <fieldset class="enums">
+        <label>Enums</label>
+        {% for enum in enums %}
+            {{ enum|safe }}
+        {% endfor %}
+    </fieldset>
 </div>
