--- a/mdbook-protobuf/templates/service.html
+++ b/mdbook-protobuf/templates/service.html
@@ -1,5 +1,10 @@
 <div class="service">
     <h2>{{name}}</h2>
+    {% if let Some(meta) = meta %}
+       {% if let Some(comment) = meta.leading_comments %}
+         <em>{{comment}}</em>
+        {% endif %}
+    {% endif %}
     {% for method in methods %}
         {{ method|safe }}
     {% endfor %}
