Unify namespaces, but this still doesn't help link resolution due to no discriminator of packages and nested messages. Will need to at least prebuild a package index.

--- a/mdbook-protobuf/templates/proto.html
+++ b/mdbook-protobuf/templates/proto.html
@@ -1,4 +1,5 @@
-<div class="proto">
+<fieldset class="proto">
+    <label>{{filename }}</label>
     <fieldset class="services">
         <label>Services</label>
         {% for service in services %}
@@ -17,4 +18,4 @@
             {{ enum|safe }}
         {% endfor %}
     </fieldset>
-</div>
+</fieldset>
