--- a/mdbook-protobuf/templates/field.html
+++ b/mdbook-protobuf/templates/field.html
@@ -4,14 +4,7 @@
 <strong class="type">
     {% match typ %}
         {% when FieldType::Primitive with (primitive) %}
-            {% match primitive %}
-                {% when prost_types::field_descriptor_proto::Type::String %}
-                    string
-                {% when prost_types::field_descriptor_proto::Type::Int32 %}
-                    i32
-                {% else %}
-                   @todo rest of the primitives
-            {% endmatch %}
+            {{ FieldType::definition(typ)|safe }}
         {% when FieldType::Symbol with (link) %}
             {{link|safe}}
         {% else %}
