Add support for oneof and optional fields

--- a/mdbook-protobuf/templates/field.html
+++ b/mdbook-protobuf/templates/field.html
@@ -1,6 +1,8 @@
 <fieldset class="field">
     <label>{{name}}</label>
-
+{% if optional %}
+<span class="optional">(optional)</span>
+{% endif %}
 <strong class="type">
     {% match typ %}
         {% when FieldType::Primitive with (primitive) %}
