Partial progress assigning backlinks

--- a/mdbook-protobuf/templates/message.html
+++ b/mdbook-protobuf/templates/message.html
@@ -28,4 +28,15 @@
     {% for enum in nested_enum %}
     {{ enum|safe }}
     {% endfor %}
+
+    {% if backlinks.len() > 0 %}
+    <fieldset>
+        <label>backlinks</label>
+        <ul>
+            {% for link in backlinks %}
+            <li>{{ link|safe }}</li>
+            {% endfor %}
+        </ul>
+    </fieldset>
+    {% endif %}
 </fieldset>
