Add backlinks to enum with trait abstraction

--- a/mdbook-protobuf/templates/message.html
+++ b/mdbook-protobuf/templates/message.html
@@ -29,14 +29,5 @@
     {{ enum|safe }}
     {% endfor %}
 
-    {% if backlinks.len() > 0 %}
-    <fieldset>
-        <label>backlinks</label>
-        <ul>
-            {% for link in backlinks %}
-            <li>{{ link|safe }}</li>
-            {% endfor %}
-        </ul>
-    </fieldset>
-    {% endif %}
+    {{ backlinks|safe }}
 </fieldset>
