Refactor symbol linking

--- a/mdbook-protobuf/templates/enum.html
+++ b/mdbook-protobuf/templates/enum.html
@@ -1,4 +1,4 @@
-<fieldset class="enum" id="{{Self::href_id(self)}}">
+<fieldset class="enum" id="{{self_link.id()}}">
     <label>{{name}}</label>
     <ul>
         {% for value in values %}
