--- a/mdbook-protobuf/templates/field.html
+++ b/mdbook-protobuf/templates/field.html
@@ -1,4 +1,4 @@
-<fieldset class="field">
+<fieldset class="field" id="{{self_link.id()}}">
     <label>
         {% if deprecated %}
         <s>{{ name }}</s>
