--- a/mdbook-protobuf/templates/message.html
+++ b/mdbook-protobuf/templates/message.html
@@ -1,4 +1,4 @@
-<fieldset class="message" id="{{Self::href_id(self)}}">
+<fieldset class="message" id="{{self_link.id()}}">
     <label>
         {% if deprecated %}
         <s>{{ name }}</s>
