Fix method linking, extract links to a separate module.

--- a/mdbook-protobuf/templates/method.html
+++ b/mdbook-protobuf/templates/method.html
@@ -1,4 +1,4 @@
-<fieldset class="method">
+<fieldset class="method" id="{{self_link.id()}}">
     {% if deprecated %}
     <s>{{ name }}</s>
     {% else %}
