feat(Content linking): link to services, fix specificity issue with nested messages

--- a/mdbook-protobuf/templates/service.html
+++ b/mdbook-protobuf/templates/service.html
@@ -1,4 +1,4 @@
-<fieldset class="service">
+<fieldset class="service" id="{{self_link.id()}}">
     <label>{{ name }}</label>
     {% if let Some(meta) = meta %}
        {% if let Some(comment) = meta.leading_comments %}
