feat(Backlinking): conclude backlinking with bindings to service and method

--- a/mdbook-protobuf/templates/method.html
+++ b/mdbook-protobuf/templates/method.html
@@ -11,4 +11,5 @@
     {% endif %}
     <h2>{{request_message|safe}}</h2>
     <h2>{{response_message|safe}}</h2>
+    {{ backlinks|safe }}
 </fieldset>
