--- a/mdbook-protobuf/templates/service.html
+++ b/mdbook-protobuf/templates/service.html
@@ -5,6 +5,7 @@
          <em>{{comment}}</em>
         {% endif %}
     {% endif %}
+    {{ backlinks|safe }}
     {% for method in methods %}
         {{ method|safe }}
     {% endfor %}
