feat(Template): start styles, split meta up

--- a/mdbook-protobuf/templates/enum.html
+++ b/mdbook-protobuf/templates/enum.html
@@ -1,4 +1,6 @@
 <fieldset class="enum" id="{{self_link.id()}}">
+    {% if let Some(src) = source %}{{src|safe}}{% endif %}
+    {{comments|safe}}
     <label>{{name}}</label>
     <ul>
         {% for value in values %}
