--- a/mdbook-protobuf/templates/proto.html
+++ b/mdbook-protobuf/templates/proto.html
@@ -1,4 +1,4 @@
-<fieldset class="proto">
+<fieldset class="mdbook-proto">
     <label>{{filename }}</label>
     {% if services.len() > 0 %}
     <fieldset class="services">
