--- a/mdbook-protobuf/templates/oneof_field.html
+++ b/mdbook-protobuf/templates/oneof_field.html
@@ -1,5 +1,5 @@
 <fieldset class="oneof">
-    <label>oneof {{name}}</label>
+    <label>{{name}}</label>
 
     {% if let Some(meta) = meta %}
     {% if let Some(comment) = meta.leading_comments %}
