--- a/mdbook-protobuf/templates/backlinks.html
+++ b/mdbook-protobuf/templates/backlinks.html
@@ -1,4 +1,4 @@
-<details class="backlinks">
+<details class="backlinks" data-usage-count="{{links.len()}}">
     <summary><span class="summary">{{links.len()}}&nbsp;usage{% if links.len() != 1 %}s{%endif%}</span></summary>
     <ul>
         {% for link in links %}
