--- a/mdbook-protobuf/templates/oneof_field.html
+++ b/mdbook-protobuf/templates/oneof_field.html
@@ -1,11 +1,6 @@
 <fieldset class="oneof">
+    {{comments|safe}}
     <label>{{name}}</label>
-
-    {% if let Some(meta) = meta %}
-    {% if let Some(comment) = meta.leading_comments %}
-    <em>{{comment}}</em>
-    {% endif %}
-    {% endif %}
 
     {% for field in fields %}
     {{ field|safe }}
